<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity"
    android:paddingHorizontal="40dp">

    <ImageView
        android:layout_width="215dp"
        android:layout_height="65dp"
        android:src="@drawable/hello"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        />

    <EditText
        android:id="@+id/name_imput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text"
        android:layout_marginTop="@dimen/Input_margin"
        />

    <EditText
        android:id="@+id/last_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:inputType="text"
        android:layout_marginTop="@dimen/Input_margin"
    />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:layout_marginTop="@dimen/Input_margin"
        />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/Input_margin"
        />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        android:textStyle="italic"
        android:layout_marginTop="@dimen/Input_margin"

    />

    <Button
        android:layout_width="219dp"
        android:layout_height="33dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/sing_in"
        android:textColor="@color/dusty_white"
     android:background="@drawable/round_button"
        android:id="@+id/sing_in_button"
/>

</LinearLayout>