<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <ImageView
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:src="@drawable/title"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
       />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/our_menu"
        android:textAllCaps="true"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        />

    <GridLayout
        android:id="@+id/grid_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:padding="24dp"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="50dp">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_cold_drinks"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="@dimen/menu_button_margin"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_padding"
            android:paddingVertical="@dimen/menu_buttons_padding_v"
            android:text="@string/cold_drinks"
            android:textColor="@color/dusty_white"
            android:textSize="@dimen/menu_buttons_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:text="@string/hot_drinks"
            android:textColor="@color/dusty_white"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_padding"
            android:layout_marginLeft="@dimen/menu_button_margin"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_buttons_text"
            android:paddingVertical="@dimen/menu_buttons_padding_v"
            android:id="@+id/button_hot_drinks" />

        <androidx.appcompat.widget.AppCompatButton
            android:text="@string/sweets"
            android:textColor="@color/dusty_white"
            android:background="@drawable/second_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_padding"
            android:layout_marginRight="@dimen/menu_button_margin"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_buttons_text"
            android:paddingVertical="@dimen/menu_buttons_padding_v"
            android:id="@+id/button_sweets" />

        <androidx.appcompat.widget.AppCompatButton
            android:text="@string/salties"
            android:textColor="@color/dusty_white"
            android:background="@drawable/second_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_padding"
            android:layout_marginLeft="@dimen/menu_button_margin"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_buttons_text"
            android:paddingVertical="@dimen/menu_buttons_padding_v"
            android:id="@+id/button_salties"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:text="@string/combos"
            android:textColor="@color/dusty_white"
            android:background="@drawable/third_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_padding"
            android:layout_marginRight="@dimen/menu_button_margin"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_buttons_text"
            android:paddingVertical="@dimen/menu_buttons_padding_v"
            android:id="@+id/button_combos"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:text="@string/customizable"
            android:textColor="@color/dusty_white"
            android:background="@drawable/third_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_padding"
            android:layout_marginLeft="@dimen/menu_button_margin"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_buttons_text"
            android:paddingVertical="@dimen/menu_buttons_padding_v"
            android:id="@+id/button_customizable"
            />


    </GridLayout>

</LinearLayout>